Bug 40082 - Missing includes (image-surface-private.h) and function declaration CairoQuartzCreateCGImage
Summary: Missing includes (image-surface-private.h) and function declaration CairoQuar...
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: quartz backend (show other bugs)
Version: 1.10.3
Hardware: Other Mac OS X (All)
: medium normal
Assignee: Vladimir Vukicevic
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-14 09:17 UTC by Jesse van den Kieboom
Modified: 2011-09-03 10:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Add missing includes (1.04 KB, patch)
2011-08-14 09:17 UTC, Jesse van den Kieboom
Details | Splinter Review
Rename function declaration (802 bytes, patch)
2011-08-14 09:18 UTC, Jesse van den Kieboom
Details | Splinter Review

Description Jesse van den Kieboom 2011-08-14 09:17:50 UTC
Created attachment 50208 [details] [review]
Add missing includes

There are two files missing the cairo-image-surface-private.h include and there seems to be a function that was renamed but the function declaration was not renamed. Following two patches that solve the issue.
Comment 1 Jesse van den Kieboom 2011-08-14 09:18:17 UTC
Created attachment 50209 [details] [review]
Rename function declaration
Comment 2 Andrea Canciani 2011-09-03 10:09:41 UTC
(In reply to comment #1)
> Created an attachment (id=50209) [details]
> Rename function declaration

Sorry, I didn't notice the bugreport and pushed the first patch along with other build fixes in:

commit 0c620080afa892f7bb642cc90fb72aafbebad16d
Author: Andrea Canciani <ranma42@gmail.com>
Date:   Tue Aug 30 16:15:57 2011 +0200

    quartz: Fix compilation
    
    cairo-image-surface-private.h is needed in order to access
    cairo_image_surface_t fields.
    
    Fixes multiple build errors: dereferencing pointer to incomplete type


I just pushed the second patch to master in:

commit b0aec95c8e43622c942c08d6dd8f6ab032983ed5
Author: Jesse van den Kieboom <jessevdk@gnome.org>
Date:   Sun Aug 14 18:12:28 2011 +0200

    quartz: Rename declaration of _cairo_quartz_create_cgimage
    
    The function was renamed in 81efbc1847c4b9c08440d76bbc1636b21cac16d8
    but the prototype was not updated.
    
    Silences the warning:
    cairo-quartz-surface.c:165: warning: no previous prototype for 'CairoQuartzCreateCGImage'
    
    Along with 0c620080afa892f7bb642cc90fb72aafbebad16d, fixes
    https://bugs.freedesktop.org/show_bug.cgi?id=40082

Thank you for your patches!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.