quartz: Rename declaration of _cairo_quartz_create_cgimage

The function was renamed in 81efbc1847c4b9c08440d76bbc1636b21cac16d8
but the prototype was not updated.

Silences the warning:
cairo-quartz-surface.c:165: warning: no previous prototype for 'CairoQuartzCreateCGImage'

Along with 0c620080afa892f7bb642cc90fb72aafbebad16d, fixes
https://bugs.freedesktop.org/show_bug.cgi?id=40082